tx/build/log/idf_py_stdout_output_4114280
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/davey_schoe/esp/mcmb_tx_dv3/build/bootloader/esp-idf/esptool_py && /home/davey_schoe/.espressif/python_env/idf5.5_py3.11_env/bin/python /home/davey_schoe/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/davey_schoe/esp/mcmb_tx_dv3/build/bootloader/bootloader.bin
Bootloader binary size 0x6600 bytes. 0xa00 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj
FAILED: esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj 
/home/davey_schoe/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-1428-g0f0068fff3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/davey_schoe/esp/mcmb_tx_dv3/build/config -I/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/include -I/home/davey_schoe/esp/esp-idf/components/newlib/platform_include -I/home/davey_schoe/esp/esp-idf/components/freertos/config/include -I/home/davey_schoe/esp/esp-idf/components/freertos/config/include/freertos -I/home/davey_schoe/esp/esp-idf/components/freertos/config/xtensa/include -I/home/davey_schoe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/davey_schoe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/davey_schoe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/davey_schoe/esp/esp-idf/components/freertos/esp_additions/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/include/soc -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/dma/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/davey_schoe/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/davey_schoe/esp/esp-idf/components/heap/include -I/home/davey_schoe/esp/esp-idf/components/heap/tlsf -I/home/davey_schoe/esp/esp-idf/components/log/include -I/home/davey_schoe/esp/esp-idf/components/soc/include -I/home/davey_schoe/esp/esp-idf/components/soc/esp32 -I/home/davey_schoe/esp/esp-idf/components/soc/esp32/include -I/home/davey_schoe/esp/esp-idf/components/soc/esp32/register -I/home/davey_schoe/esp/esp-idf/components/hal/platform_port/include -I/home/davey_schoe/esp/esp-idf/components/hal/esp32/include -I/home/davey_schoe/esp/esp-idf/components/hal/include -I/home/davey_schoe/esp/esp-idf/components/esp_rom/include -I/home/davey_schoe/esp/esp-idf/components/esp_rom/esp32/include -I/home/davey_schoe/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/davey_schoe/esp/esp-idf/components/esp_rom/esp32 -I/home/davey_schoe/esp/esp-idf/components/esp_common/include -I/home/davey_schoe/esp/esp-idf/components/esp_system/include -I/home/davey_schoe/esp/esp-idf/components/esp_system/port/soc -I/home/davey_schoe/esp/esp-idf/components/esp_system/port/include/private -I/home/davey_schoe/esp/esp-idf/components/xtensa/esp32/include -I/home/davey_schoe/esp/esp-idf/components/xtensa/include -I/home/davey_schoe/esp/esp-idf/components/xtensa/deprecated_include -I/home/davey_schoe/esp/esp-idf/components/lwip/include -I/home/davey_schoe/esp/esp-idf/components/lwip/include/apps -I/home/davey_schoe/esp/esp-idf/components/lwip/include/apps/sntp -I/home/davey_schoe/esp/esp-idf/components/lwip/lwip/src/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/freertos/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/davey_schoe/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/davey_schoe/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/davey_schoe/esp/esp-idf/components/esp_driver_gpio/include -I/home/davey_schoe/esp/esp-idf/components/esp_event/include -I/home/davey_schoe/esp/esp-idf/components/esp_eth/include -I/home/davey_schoe/esp/esp-idf/components/esp_driver_spi/include -I/home/davey_schoe/esp/esp-idf/components/esp_pm/include -I/home/davey_schoe/esp/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/davey_schoe/esp/mcmb_tx_dv3=. -fmacro-prefix-map=/home/davey_schoe/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj -MF esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj.d -o esp-idf/src/CMakeFiles/__idf_src.dir/r.c.obj -c /home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c: In function 'rt_remove':
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:262:25: error: expected ',' or ';' before ':' token
  262 |     struct rt *p = h->rt:          // previous entry
      |                         ^
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:262:16: warning: unused variable 'p' [-Wunused-variable]
  262 |     struct rt *p = h->rt:          // previous entry
      |                ^
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:261:16: warning: unused variable 'c' [-Wunused-variable]
  261 |     struct rt *c = h->rt;          // current entry
      |                ^
/home/davey_schoe/esp/mcmb_tx_dv3/lwmb/src/r.c:288:1: error: control reaches end of non-void function [-Werror=return-type]
  288 | }
      | ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
